# external_giflib

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/giflib_416_cmake/: CMakeLists.txt
resources/giflib_512_cmake/: CMakeLists.txt
resources/giflib_cmake/: CMakeLists.txt
test/: CMakeLists.txt  giflib_test.cpp
